syntax="proto3";

package proto;


option go_package="github.com/renaldyhidayatt/movie_grpc";


message Movie {
    string id =1;
    string title =2;
    string genre =3;
}

message CreateMovieRequest {
    Movie movie = 1;
}

message CreateMovieResponse {
    Movie movie = 1;
}

message ReadMovieRequest{
    string id =1;
}

message ReadMovieResponse{
    Movie movie =1;
}

message ReadMoviesRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
}

message ReadMoviesResponse {
  repeated Movie movies = 1;
  int64 total_records = 2;
}


message UpdateMovieRequest{
    Movie movie =1;
}


message UpdateMovieResponse{
    Movie movie =1;
}

 message DeleteMovieRequest{
    string id =1;
}
message DeleteMovieResponse{
    bool success =1;
}
  
  
 service MovieService {
    rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse) {}
    rpc GetMovie(ReadMovieRequest) returns (ReadMovieResponse) {}
    rpc GetMovies(ReadMoviesRequest) returns (ReadMoviesResponse) {}
    rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse) {}
    rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse) {}
 }